# btctipserver

./: .gitignore  Cargo.toml  LICENSE  Procfile  README.md  app.json  app_ini_example.json  config.ini  config_example.ini  config_liquid_example.ini  config_test.ini  descriptor.txt  signed_descriptor.txt
.github/workflows/: ci.yml
assets/: index.css  index.html
assets/css/: style.css  styles.css
assets/js/: bundle.min.js
bitcoin/: Cargo.toml
bitcoin/src/: bip21.rs  config.rs  lib.rs
lightning/: Cargo.toml  config_example.ini
lightning/src/: config.rs  lib.rs
liquid/: Cargo.toml  config_example.ini
liquid/src/: config.rs  esplora.rs  lib.rs
server/: Cargo.toml
server/src/: config.rs  html.rs  main.rs  server.rs  wallet.rs
src/: bip21.rs  btcwallet.rs  clightning.rs  config.rs  error.rs  html.rs  liquidwallet.rs  main.rs  server.rs  wallet.rs
