[package]
name = "btctipserver-liquid"
version = "0.1.1-dev"
edition = "2021"

[dependencies]
edk = { git = "https://github.com/lvaccaro/edk.git" }
dirs-next = "2.0.0"
structopt = "0.3"
hex = "0.4"
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
serde = "1.0.114"
serde_json = "1.0"
serde_derive = "1.0.114"

[features]
electrum = ["edk/electrum"]